GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/Datacash_Refund_Request__c.object-meta.xml
<CustomObject>
    <description>A custom object which tracks Refund requests from ECC advisors</description>
    <label>Refund Request</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Refund Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>