GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Agent_Reference__c.field-meta.xml
<CustomField>
    <fullName>Agent_Reference__c</fullName>
    <label>Payment Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>