GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Booking_is_on_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Booking_is_on_Salesforce__c</fullName>
    <label>Booking is on Salesforce</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>