GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Customers_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customers_Email_Address__c</fullName>
    <label>Customers Email Address</label>
    <type>Email</type>
</CustomField>