GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Date_That_Refund_Was_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_That_Refund_Was_Processed__c</fullName>
    <label>Date That Refund Was Processed</label>
    <type>Date</type>
</CustomField>