GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Duplicate_Request_No_Longer_Needed__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Request_No_Longer_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Request / No Longer Needed</label>
    <type>Checkbox</type>
</CustomField>