GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Estimated_Date_That_Refund_Should_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_That_Refund_Should_Arrive__c</fullName>
    <formula>Date_That_Refund_Was_Processed__c +10</formula>
    <label>Estimated Date That Refund Should Arrive</label>
    <type>Date</type>
</CustomField>