GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>Incident_Number__c</fullName>
    <label>Incident Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>