GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Is_Draft_Refund_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft_Refund_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Draft Refund Request</label>
    <type>Checkbox</type>
</CustomField>