GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Logged_Incorrectly__c.field-meta.xml
<CustomField>
    <fullName>Logged_Incorrectly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logged Incorrectly</label>
    <type>Checkbox</type>
</CustomField>