GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/More_Details__c.field-meta.xml
<CustomField>
    <fullName>More_Details__c</fullName>
    <label>More Details</label>
    <type>TextArea</type>
</CustomField>