GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <formula>Ticket_Number__r.PNR__c</formula>
    <label>PNR</label>
    <type>Text</type>
</CustomField>