GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/PNR_If_Booking_Is_Not_On_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>PNR_If_Booking_Is_Not_On_Salesforce__c</fullName>
    <label>PNR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>