GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Point_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale__c</fullName>
    <formula>Ticket_Number__r.Point_of_Sale__c</formula>
    <label>Point of Sale</label>
    <type>Text</type>
</CustomField>