GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Processed_Hour__c.field-meta.xml
<CustomField>
    <fullName>Processed_Hour__c</fullName>
    <formula>VALUE( MID(TEXT( LastModifiedDate ),12,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processed Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>