GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial refund</fullName>
            </value>
            <value>
                <fullName>Complete refund</fullName>
            </value>
            <value>
                <fullName>Fare difference refund only</fullName>
            </value>
            <value>
                <fullName>Exchange fee refund only</fullName>
            </value>
            <value>
                <fullName>Both fare diff &amp; exchange fee refund</fullName>
            </value>
            <value>
                <fullName>PRR – Delay compensation</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>GWG</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>Double booking</fullName>
                <isActive>false</isActive>
                <label>Double booking</label>
            </value>
            <value>
                <fullName>Duplicate booking</fullName>
                <isActive>false</isActive>
                <label>Duplicate booking</label>
            </value>
            <value>
                <fullName>Error online (Please enter the incident number below)</fullName>
                <isActive>false</isActive>
                <label>Error online (Please enter the incident number below)</label>
            </value>
            <value>
                <fullName>GWG (Please include more details below)</fullName>
                <isActive>false</isActive>
                <label>GWG (Please include more details below)</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other (Please include more details below)</fullName>
                <isActive>false</isActive>
                <label>Other (Please include more details below)</label>
            </value>
            <value>
                <fullName>Overcharged for exchange</fullName>
                <isActive>false</isActive>
                <label>Overcharged for exchange</label>
            </value>
            <value>
                <fullName>PRR compensation</fullName>
                <isActive>false</isActive>
                <label>PRR compensation</label>
            </value>
            <value>
                <fullName>Refund of credit card fees</fullName>
                <isActive>false</isActive>
                <label>Refund of credit card fees</label>
            </value>
            <value>
                <fullName>Refund of exchange fees</fullName>
                <isActive>false</isActive>
                <label>Refund of exchange fees</label>
            </value>
            <value>
                <fullName>Refund of insurance</fullName>
                <isActive>false</isActive>
                <label>Refund of insurance</label>
            </value>
            <value>
                <fullName>SNAP ticket refund</fullName>
                <isActive>false</isActive>
                <label>SNAP ticket refund</label>
            </value>
            <value>
                <fullName>Train cancelled-refund of unused ticket(s)</fullName>
                <isActive>false</isActive>
                <label>Train cancelled-refund of unused ticket(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>