GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Reason_For_Using_Datacash__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Using_Datacash__c</fullName>
    <label>Reason For Refund</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>