GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Refund_Pending__c.field-meta.xml
<CustomField>
    <fullName>Refund_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Pending</label>
    <type>Checkbox</type>
</CustomField>