GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Refund_Processed__c.field-meta.xml
<CustomField>
    <fullName>Refund_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Processed</label>
    <type>Checkbox</type>
</CustomField>