GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund had to be done with Datacash</fullName>
            </value>
            <value>
                <fullName>Refund could have been done elsewhere</fullName>
            </value>
            <value>
                <fullName>Approved (Money has been refunded)</fullName>
                <isActive>false</isActive>
                <label>Approved (Money has been refunded)</label>
            </value>
            <value>
                <fullName>Rejected (Request has been sent back to the advisor)</fullName>
                <isActive>false</isActive>
                <label>Rejected (Request has been sent back to the advisor)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>