GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/fields/Webhelp_Location__c.field-meta.xml
<CustomField>
    <fullName>Webhelp_Location__c</fullName>
    <formula>IF(CreatedBy.CompanyName = &quot;Webhelp&quot;, CreatedBy.Department, 
IF(LastModifiedBy.CompanyName = &quot;Webhelp&quot;, LastModifiedBy.Department, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Webhelp Location</label>
    <type>Text</type>
</CustomField>