GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/validationRules/Booking_Is_Not_On_Salesforce.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Is_Not_On_Salesforce</fullName>
    <active>true</active>
    <description>If booking is not on Salesforce then manual PNR needs to be entered</description>
    <errorConditionFormula>ISPICKVAL(Booking_is_on_Salesforce__c,&quot;No&quot;)
&amp;&amp;
ISBLANK( PNR_If_Booking_Is_Not_On_Salesforce__c )</errorConditionFormula>
    <errorDisplayField>PNR_If_Booking_Is_Not_On_Salesforce__c</errorDisplayField>
    <errorMessage>Please enter the PNR of the booking</errorMessage>
</ValidationRule>