GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/validationRules/Booking_is_on_Salesforce.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_is_on_Salesforce</fullName>
    <active>true</active>
    <description>If Booking on Salesforce checkbox is TRUE then the ticket number must not be blank</description>
    <errorConditionFormula>ISPICKVAL( Booking_is_on_Salesforce__c,&quot;Yes&quot;)
&amp;&amp;
ISBLANK(Ticket_Number__c  )</errorConditionFormula>
    <errorDisplayField>Ticket_Number__c</errorDisplayField>
    <errorMessage>Please enter a ticket number</errorMessage>
</ValidationRule>