GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/validationRules/Date_of_Refund.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Refund</fullName>
    <active>true</active>
    <description>Date of refund field becomes mandatory if the refund has been processed</description>
    <errorConditionFormula>Refund_Processed__c = TRUE
&amp;&amp;
 ISBLANK(Date_That_Refund_Was_Processed__c )</errorConditionFormula>
    <errorDisplayField>Refund_Processed__c</errorDisplayField>
    <errorMessage>Please enter the date that the refund was processed</errorMessage>
</ValidationRule>