GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/validationRules/Incident_Number_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Number_Needed</fullName>
    <active>true</active>
    <description>Makes the incident number field mandatory if Error Online is selected</description>
    <errorConditionFormula>ISPICKVAL( Reason_Code__c ,&quot;Error online (Please enter the incident number below)&quot;)
&amp;&amp;
ISBLANK( Incident_Number__c )</errorConditionFormula>
    <errorDisplayField>Incident_Number__c</errorDisplayField>
    <errorMessage>Please enter the Incident Number for the online error</errorMessage>
</ValidationRule>