GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/validationRules/More_Details_Needed_After_Reason_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>More_Details_Needed_After_Reason_Code</fullName>
    <active>true</active>
    <description>If Other or GWG is selected the more details must be entered</description>
    <errorConditionFormula>(ISPICKVAL( Reason_Code__c,&quot;GWG (Please include more details below)&quot;)
||
ISPICKVAL(Reason_Code__c,&quot;Other (Please include more details below)&quot;))
&amp;&amp;
ISBLANK( More_Details__c )</errorConditionFormula>
    <errorDisplayField>More_Details__c</errorDisplayField>
    <errorMessage>Please enter more information about the reason for refund</errorMessage>
</ValidationRule>