GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/listViews/Draft_Requests.listView-meta.xml
<ListView>
    <fullName>Draft_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Draft_Refund_Request__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Duplicate_Request_No_Longer_Needed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Draft Requests</label>
</ListView>