GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/listViews/Duplicate_No_Longer_Needed.listView-meta.xml
<ListView>
    <fullName>Duplicate_No_Longer_Needed</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <columns>Currency__c</columns>
    <columns>Amount_To_Be_Refunded__c</columns>
    <columns>Reason_For_Using_Datacash__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Duplicate_Request_No_Longer_Needed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Duplicate / No Longer Needed</label>
    <language>en_US</language>
</ListView>