GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/listViews/Processed_Requests.listView-meta.xml
<ListView>
    <fullName>Processed_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_That_Refund_Was_Processed__c</columns>
    <columns>Case__c</columns>
    <columns>Currency__c</columns>
    <columns>Amount_To_Be_Refunded__c</columns>
    <columns>Reason_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Refund_Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Processed Requests</label>
    <language>en_US</language>
</ListView>