GearsetPOC/force-app/main/default/objects/Datacash_Refund_Request__c/listViews/To_Be_Processed.listView-meta.xml
<ListView>
    <fullName>To_Be_Processed</fullName>
    <columns>NAME</columns>
    <columns>PNR__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <columns>Currency__c</columns>
    <columns>Amount_To_Be_Refunded__c</columns>
    <columns>Reason_For_Using_Datacash__c</columns>
    <columns>PNR_If_Booking_Is_Not_On_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Refund_Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Duplicate_Request_No_Longer_Needed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Refund_Pending__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Is_Draft_Refund_Request__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>To Be Processed</label>
</ListView>